FIX: Horizontal scroll issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,6 +50,10 @@
 
 /* General */
 
+body {
+    overflow-x: hidden;
+}
+
 h1 {
     margin: 125px 0 5% 0 !important;
 }
